--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,29 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <%- include('./partials/head'); -%>
+</head>
+<body class="container">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <header>
+    <%- include('./partials/header'); -%>
+  </header>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Wix Returns!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <div class="card">
+  <main>
+    <div class="jumbotron">
+      <div class="card">
         <div class="card-header">
-          Featured
+          Returns
         </div>
         <div class="card-body">
-          <h5 class="card-title">Enter Order ID</h5>
-          <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
-          <button type="submit" class="btn btn-primary mb-3">Fetch Order Details</button>
+          <h5 class="card-title">Dashboard</h5>
+          
         </div>
       </div>
+    </div>
+  </main>
 
-  </body>
+  <footer>
+    <%- include('./partials/footer'); -%>
+  </footer>
+
+</body>
 </html>
